fixed jumping viewport

--- a/src/global.css
+++ b/src/global.css
@@ -4,10 +4,14 @@
   --bg-color: #f7f7f7;
 }
 
-body {
+html {
   height: 100vh;
+  width: 100vw;
+}
+
+body {
+  height: 100%;
   background-color: var(--bg-color);
-  padding: 2em 0em;
 }
 
 .ts {
